--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,6 +15,8 @@
     update any existing page or create new pages.
   </p>
 
-  <button ion-button color="danger">Danger</button>
+    <img src="assets/imgs/img1.jpg"/>
   
+  <button ion-button color="danger">Danger</button>
+
 </ion-content>
