--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,8 +12,13 @@
     Tomar foto
   </button>
 
-  <img [src]="base64Image" *ngIf="base64Image
-  " alt="">
+  <img [src]="base64Image" *ngIf="base64Image " alt="">
+
+<ion-row>
+  <ion-col col-6 *ngFor="let foto of fotos">
+    <img [src]="foto" *ngIf="foto" alt="">
+  </ion-col>
+</ion-row>
 
   <p>
     This starter project comes with simple tabs-based layout for apps
