Se agrego buscador de mapa

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -8,6 +8,7 @@
 
 <ion-content padding>
 
-{{ latitude }} y {{ longitude }}
+<!-- {{ latitude }} y {{ longitude }} -->
+<div #map id="map"></div>
 
 </ion-content>
